<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item android:id="@+id/menu1"
            android:title="@string/logout"
            android:icon = "@drawable/baseline_logout_24"
            app:showAsAction="always" />

        <item android:id="@+id/menu2"
            android:title="@string/upload"
            android:icon = "@drawable/baseline_file_upload_24"
            app:showAsAction="always" />
        <item android:id="@+id/menu3"
            android:title="@string/account"
            android:icon = "@drawable/baseline_account_circle_24_white"

            app:showAsAction="always" />

        <item android:id="@+id/menu4"
            android:title="@string/location"
            android:icon = "@drawable/baseline_location_on_24"

            app:showAsAction="always" />

    </group>
</menu>